[project]
name = "git-tools"
version = "1.0.0"
description = "Small helpers for checking clean git repositories."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["git_tools"]
